--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "graph-questions",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'node_modules' --exec 'ts-node-dev src/index.ts'",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "nodemon": "^2.0.15",
-    "prettier": "^2.6.2",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.3"
-  },
-  "dependencies": {
-    "@prisma/client": "^3.12.0",
-    "apollo-server": "^3.6.7",
-    "graphql": "^16.3.0",
-    "prisma": "^3.12.0"
-  }
+	"name": "graph-questions",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'node_modules' --exec 'ts-node-dev src/index.ts'",
+		"test": "npx jest --passWithNoTests --runInBand --no-cache",
+		"test:verbose": "npx jest",
+		"test:watch": "npm run test -- --watch",
+		"test:ci": "npm run test -- --coverage"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.19.0",
+		"@typescript-eslint/parser": "^5.19.0",
+		"eslint": "^8.13.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"nodemon": "^2.0.15",
+		"prettier": "^2.6.2",
+		"ts-node-dev": "^1.1.8",
+		"typescript": "^4.6.3"
+	},
+	"dependencies": {
+		"@prisma/client": "^3.12.0",
+		"apollo-server": "^3.6.7",
+		"graphql": "^16.3.0",
+		"jest": "^27.5.1",
+		"prisma": "^3.12.0",
+		"ts-jest": "^27.1.4"
+	}
 }
