--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,6 @@
 {
-  "semi": true,
-  "trailingComma": "all",
-  "singleQuote": true,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "endOfLine": "lf"
+	"singleQuote": true,
+	"semi": true,
+	"trailingComma": "es5",
+	"tabWidth": 2
 }
