--- a/package.json
+++ b/package.json
@@ -14,22 +14,30 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.19.0",
-		"@typescript-eslint/parser": "^5.19.0",
-		"eslint": "^8.13.0",
-		"eslint-config-prettier": "^8.5.0",
+		"@types/jest": "^27.4.0",
+		"@types/node": "^17.0.18",
+		"@types/supertest": "^2.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.12.0",
+		"@typescript-eslint/parser": "^5.12.0",
+		"eslint": "^8.9.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-import-resolver-typescript": "^2.5.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-import-helpers": "^1.2.1",
 		"eslint-plugin-prettier": "^4.0.0",
+		"jest": "^27.5.1",
 		"nodemon": "^2.0.15",
-		"prettier": "^2.6.2",
-		"ts-node-dev": "^1.1.8",
-		"typescript": "^4.6.3"
+		"prettier": "^2.5.1",
+		"supertest": "^6.2.2",
+		"ts-jest": "^27.1.3",
+		"ts-node": "^10.5.0",
+		"typescript": "^4.5.5"
 	},
 	"dependencies": {
 		"@prisma/client": "^3.12.0",
 		"apollo-server": "^3.6.7",
 		"graphql": "^16.3.0",
-		"jest": "^27.5.1",
-		"prisma": "^3.12.0",
-		"ts-jest": "^27.1.4"
+		"prisma": "^3.12.0"
 	}
 }
